# llm_explore

./: .gitignore  README.md  requirements.txt
old_tests/: test_accumulation.py
open_lm/: .gitignore  README.md  attention.py  main.py  model.py  params.py  pyproject.toml  train.py
open_lm/src/: data.py  distributed.py  evaluate.py  file_utils.py  losses.py  main.py  model.py  params.py  precision.py  train.py
open_lm/src/hf/: configuration_openlm.py
open_lm/src/open_lm/: __init__.py  attention.py  data.py  evaluate.py  logger.py  main.py  meters.py  model.py  train.py
open_lm/src/open_lm/hf/: __init__.py  modeling_openlm.py
open_lm/src/open_lm/positional_embedding/: head_rotary.py  llama_rotary.py
open_lm/src/open_lm/utils/: convert_llama.py  make_wds_manifest.py  update_manifest.py
open_lm/src/open_lm/utils/transformers/: hf_config.py  hf_model.py
open_lm/src/positional_embedding/: rotary.py
open_lm/src/utils/: update_manifest.py
open_lm/src/utils/transformers/: hf_config.py  hf_model.py
open_lm/tests/: shared.py  test_accumulation.py  utils.py
tests/: utils.py
