[project]
name = "open-lm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
dependencies = [
    "torch>=2.4.1",
    "transformers>=4.44.2",
    "datasets>=3.0.0",
    "huggingface-hub>=0.24.7",
    "webdataset>=0.2.100",
    "cloudpathlib>=0.19.0",
    "wandb>=0.18.0",
    "jsonlines>=4.0.0",
    "boto3>=1.35.19",
    "pytest==7.0.1",
    "pysimdjson>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black==23.11.0",
    "pytest-cov==3.0.0",
    "pytest-xdist==2.5.0",
    "wikipedia>=1.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/open_lm"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests as requiring gpus",
    "s3: marks tests as requiring s3 creds",
]
